// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text component > renders color.feedback.negative.200 / strawberry correctly with NEW color name 1`] = `
.c0 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #d03c30;
}

<div>
  <p
    class="c0"
    cursor="inherit"
    title=""
  >
    The quick brown fox jumps over the lazy dog
  </p>
</div>
`;

exports[`Text component > renders color.feedback.negative.200 / strawberry correctly with OLD color name 1`] = `
.c0 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #d03c30;
}

<div>
  <p
    class="c0"
    cursor="inherit"
    title=""
  >
    The quick brown fox jumps over the lazy dog
  </p>
</div>
`;

exports[`Text component > renders color.feedback.positive.200 / apple correctly with NEW color name 1`] = `
.c0 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #317a4c;
}

<div>
  <p
    class="c0"
    cursor="inherit"
    title=""
  >
    The quick brown fox jumps over the lazy dog
  </p>
</div>
`;

exports[`Text component > renders color.feedback.positive.200 / apple correctly with OLD color name 1`] = `
.c0 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #317a4c;
}

<div>
  <p
    class="c0"
    cursor="inherit"
    title=""
  >
    The quick brown fox jumps over the lazy dog
  </p>
</div>
`;

exports[`Text component > renders correctly with default props 1`] = `
.c0 {
  font-family: CircularXX;
  font-size: 16px;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 1.33;
  text-align: left;
  color: #292924;
}

<div>
  <p
    class="c0"
    cursor="inherit"
    title=""
  >
    The quick brown fox jumps over the lazy dog
  </p>
</div>
`;
